--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -73,11 +73,10 @@
     gap: 50px 30px;
     &__item{
         border-radius: 15px;
-        padding: 50px 0 20px;
+        padding: 20px 0;
         text-align: center;
         background: #fff;
         width: 262px;
-        height: 150px;
         color: #1360ED;
     }
     &__title{
